# psuedon-blog

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  index.html
frontend/src/: components.rs  main.rs  pages.rs  routes.rs  types.rs
frontend/src/components/: posts_list.rs
frontend/src/pages/: home.rs  login_page.rs  mod.rs  post_create.rs  post_page.rs
frontend/src/static/: style.css
