[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
actix-files = "0.6.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
chrono = { version = "0.4.38", features = [ "serde" ] }
dotenv = "0.15.0"
serde = "1.0.204"
serde_json = "1.0"
futures = "0.3.30"
